--- a/work.html
+++ b/work.html
@@ -40,8 +40,14 @@
     <div class="content-block content-block__page">
         <h2 class="section-title">Work</h2>
         <p class="Work__text">日々新しい技術を学習中です。内容は随時更新します。</p>
-        <ul class="Work__capture">
+        <div class="link">
+          <a class="link-button" href="https://daichito.com/">Back To TopPage...
+              <div class="border"></div>
+              <div class="border"></div>
+          </a>
+        </div>
 
+        <ul class="Work__capture">
           <li class="work__capture-img"><a href="#"><img src="img/Portfolio.png" alt="ポートフォリオキャプチャ"></a>
             <div class="caption">
               <div class="modal-link open" data-id="1">
