--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         </ul>
       </nav>
   </header>
-  <main>
 
+  <main>
 <!-- ---------------About ----------------->
     <section id="About" class="About">
       <div class="content-block fadeInopacity">
@@ -122,19 +122,19 @@
         <article class="slider">
           <div class="slideSet">
               <div class="slide01 slide">
-                <blockquote class="embedly-card" data-card-controls="0" data-card-theme="dark" data-card-type="article" data-card-align="left"><h3><a href="https://daichito.com/blog/about-me/">ダイブログについて（自己紹介）</a></h3><p>当ブログに訪問していただきありがとうございます。 こちらは僕が副業活動で使用しているポートフォリオサイトです。良かったらご覧ください。 伊藤大地のポートフォリオはこちら 【2020年1月時点・スキル】 言語　　　　　　：HTML・CSS（Sass）・Javascript（jQuery） バージョン管理　：Git（GitHub） メインエディタ　：Visual Studio Code ...</p></blockquote>
+                <blockquote class="embedly-card" data-card-controls="0" data-card-theme="dark" data-card-type="article" data-card-align="left"><h3><a href="https://daib-log.com/about-me/">ダイブログについて（自己紹介）</a></h3><p>当ブログに訪問していただきありがとうございます。 こちらは僕が副業活動で使用しているポートフォリオサイトです。良かったらご覧ください。 伊藤大地のポートフォリオはこちら 【2020年1月時点・スキル】 言語　　　　　　：HTML・CSS（Sass）・Javascript（jQuery） バージョン管理　：Git（GitHub） メインエディタ　：Visual Studio Code ...</p></blockquote>
                 <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
               </div>
               <div class="slide02 slide">
-                <blockquote class="embedly-card" data-card-controls="0" data-card-theme="dark" data-card-type="article" data-card-align="left"><h3><a href="https://daichito.com/blog/create-a-homepage/">今の時代ホームページを作った方がいい理由</a></h3><p>どうも、ダイチです。 突然ですが、このブログを見ている方で会社務めの方はどの位いますでしょうか？ 今の時代大企業勤めでもリストラされますし、中小企業では給料もなかなか上がりません。 「企業に勤めているだけで安泰」では無くなってきています。 そういった時代だからこそ、自分の力で稼ぐために、社会の荒波に飛び出そうとされている方も多いと思います。 個人での活動（副業、転職）を考えている ...</p></blockquote>
+                <blockquote class="embedly-card" data-card-controls="0" data-card-theme="dark" data-card-type="article" data-card-align="left"><h3><a href="https://daib-log.com/wp-create-reason/">今の時代ホームページを作った方がいい理由</a></h3><p>どうも、ダイチです。 突然ですが、このブログを見ている方で会社務めの方はどの位いますでしょうか？ 今の時代大企業勤めでもリストラされますし、中小企業では給料もなかなか上がりません。 「企業に勤めているだけで安泰」では無くなってきています。 そういった時代だからこそ、自分の力で稼ぐために、社会の荒波に飛び出そうとされている方も多いと思います。 個人での活動（副業、転職）を考えている ...</p></blockquote>
                 <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
               </div>
               <div class="slide03 slide">
-                <blockquote class="embedly-card" data-card-controls="0" data-card-theme="dark" data-card-type="article" data-card-align="left"><h3><a href="https://daichito.com/blog/web-production/">【副業で月5万円を稼ぐ】プログラミング・WEB制作とは？</a></h3><p>どうも、ダイチです。 今、副業目的やフリーランスにあこがれてプログラミングを勉強している方は多いと思います。 2019年6月頃からプログラミング勉強を独学で開始。 2019年12月にポートフォリオを作成、同月ホームページ制作案件を受注。 現在も勉強を継続しつつ、主にホームページ製作案件の製作を副業にて行っています。 ＜スキル＞ ...</p></blockquote>
+                <blockquote class="embedly-card" data-card-controls="0" data-card-theme="dark" data-card-type="article" data-card-align="left"><h3><a href="https://daib-log.com/web-production/">【副業で月5万円を稼ぐ】プログラミング・WEB制作とは？</a></h3><p>どうも、ダイチです。 今、副業目的やフリーランスにあこがれてプログラミングを勉強している方は多いと思います。 2019年6月頃からプログラミング勉強を独学で開始。 2019年12月にポートフォリオを作成、同月ホームページ制作案件を受注。 現在も勉強を継続しつつ、主にホームページ製作案件の製作を副業にて行っています。 ＜スキル＞ ...</p></blockquote>
                 <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
               </div>
               <div class="slide04 slide">
-                <blockquote class="embedly-card" data-card-controls="0" data-card-theme="dark" data-card-type="article" data-card-align="left"><h3><a href="https://daichito.com/blog/recommended-study-method/">【個人的】プログラミング独学ロードマップ（ポートフォリオ作成まで）</a></h3><p>どうも、ダイチです。 この記事では個人的におススメする独学の勉強ロードマップ(ポートフォリオ作成まで)をまとめています。 ※ここでいうプログラミングとはWEB制作に必要なスキルのことを示していますのでご了承ください。 僕は副業でWEB制作の受注ができるようになりましたが、これまでスクールなどには通わず独学でやってきました。 かなり遠回りもしていますし、効率の良くない進め方もしてきました。 ...</p></blockquote>
+                <blockquote class="embedly-card" data-card-controls="0" data-card-theme="dark" data-card-type="article" data-card-align="left"><h3><a href="https://daib-log.com/study-method/">【個人的】プログラミング独学ロードマップ（ポートフォリオ作成まで）</a></h3><p>どうも、ダイチです。 この記事では個人的におススメする独学の勉強ロードマップ(ポートフォリオ作成まで)をまとめています。 ※ここでいうプログラミングとはWEB制作に必要なスキルのことを示していますのでご了承ください。 僕は副業でWEB制作の受注ができるようになりましたが、これまでスクールなどには通わず独学でやってきました。 かなり遠回りもしていますし、効率の良くない進め方もしてきました。 ...</p></blockquote>
                 <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
               </div>
           </div>
@@ -144,7 +144,7 @@
             <button class="slider-next">次へ</button>
         </div>
         <div class="Blog-link">
-          <a href="https://daichito.com/blog/">ダイブログはこちら</a>
+          <a href="https://daib-log.com/">ダイブログはこちら</a>
         </div>
       </div>
       </section>
@@ -441,7 +441,6 @@
             <a href="https://twitter.com/18__DAiCHi" target="blank" rel="noopener"><i class="fab fa-twitter-square fa-2x faa-horizontal animated-hover"></i></a>
           </div>
         </form>
-        
 
       </div>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -469,6 +468,5 @@
   <footer class="Footer">
       <p>&copy; 2020 DAICHI ITOU</p>
   </footer>
-
 </body>
 </html>
